--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 altair==5.3.0
 annotated-types==0.7.0
 attrs==23.2.0
+bcrypt==4.1.3
 blinker==1.8.2
 cachetools==5.3.3
 certifi==2024.6.2
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+extra-streamlit-components==0.1.71
 gitdb==4.0.11
 GitPython==3.1.43
 google-ai-generativelanguage==0.6.5
@@ -40,10 +42,12 @@ pydantic==2.7.4
 pydantic_core==2.18.4
 pydeck==0.9.1
 Pygments==2.18.0
+PyJWT==2.8.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
+PyYAML==6.0.1
 referencing==0.35.1
 requests==2.32.3
 rich==13.7.1
@@ -52,6 +56,7 @@ rsa==4.9
 six==1.16.0
 smmap==5.0.1
 streamlit==1.35.0
+streamlit-authenticator==0.3.2
 tenacity==8.4.1
 toml==0.10.2
 toolz==0.12.1
