--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 altair==5.3.0
 annotated-types==0.7.0
+anyio==4.4.0
 attrs==23.2.0
 bcrypt==4.1.3
 blinker==1.8.2
@@ -21,7 +22,11 @@ googleapis-common-protos==1.63.1
 grpc-google-iam-v1==0.13.0
 grpcio==1.64.1
 grpcio-status==1.62.2
+h11==0.14.0
+httpcore==1.0.5
 httplib2==0.22.0
+httpx==0.27.0
+httpx-oauth==0.14.1
 idna==3.7
 Jinja2==3.1.4
 jsonschema==4.22.0
@@ -55,8 +60,9 @@ rpds-py==0.18.1
 rsa==4.9
 six==1.16.0
 smmap==5.0.1
+sniffio==1.3.1
 streamlit==1.35.0
-streamlit-authenticator==0.3.2
+streamlit-oauth==0.1.9
 tenacity==8.4.1
 toml==0.10.2
 toolz==0.12.1
